# Binary-tree

./: .travis.yml  CMakeLists.txt  Readme.md  Tree.cpp  Tree.h  a.out  main.cpp  sonar-project.properties
src/: BitNode.h
src/model/HuffmanCoding/: HuffmanCoding.cpp  HuffmanCoding.h
src/model/thread/: Readme.md  thread.cpp  thread.h
src/model/tree/: BitNode.cpp  BitNode.h  Readme.md  Tree.cpp  Tree.h
